--- a/EGE/EGE.Data/EGE.Data.csproj
+++ b/EGE/EGE.Data/EGE.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="UoW\IUowData.cs" />
+    <Compile Include="UoW\UowData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
