create model/view/action added

--- a/EGE/EGE.Web/EGE.Web.csproj
+++ b/EGE/EGE.Web/EGE.Web.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Infrastructure\IHaveCustomMappings.cs" />
     <Compile Include="Infrastructure\IMapFrom.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CreditInputModel.cs" />
     <Compile Include="Models\CreditSearchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -242,6 +243,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Credits\SearchResult.cshtml" />
+    <Content Include="Views\Credits\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
