--- a/EGE/EGE.Web/EGE.Web.csproj
+++ b/EGE/EGE.Web/EGE.Web.csproj
@@ -244,6 +244,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Credits\SearchResult.cshtml" />
     <Content Include="Views\Credits\Create.cshtml" />
+    <Content Include="Views\Credits\Delete.cshtml" />
+    <Content Include="Views\Credits\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
